schema/testdata/validation_operation_set_forbidden_value_expression/schema.keel
model Profile {
    fields {
        identity Identity {
            @unique
        }
        username Text {
            @unique
        }
    }

    actions {
        update createProfile(id) with(username) {
            @set(profile.identity)
        }
    }
}
